client/media/notepad/css/global.css
/* ... */
      
      aside#lists nav .showing a {
        padding-left: 30px;
        display: block;
        background: url(../images/sprite1.png) no-repeat 0 -499px;
        font-size: 1.2em;
        line-height: 17px;
      }
      
      body.incomplete aside#lists nav .showing a {
        background-position: 5px -599px;
      }
      
      body.complete aside#lists nav .showing a {
        background-position: 5px -699px;
      }
    
      .open h1 a span {
        background-position: right -391px;
      } 
      
      .open nav {
        display: block;
      }
  
  
/* CONTENT */

  #content {
    background-color: #f8f5f3;
    clear: both;
    position: relative;
    z-index: 1;
    border-top: 4px solid #6ab6da;
  }
  
    #content .header {
      padding: 40px 20px 10px 120px;
      overflow: hidden;
    }
  
    #content h1 {
      font-size: 2em;
      text-decoration: underline;
      float: left;
      margin-right: 15px;
    }
      #content h1 a {
        color: #000;
      }
  
  #content .item-list {
    clear: left;
  }
  
    #content .item-list > li {
      border-bottom: 1px solid #ccc;
      position: relative;
      padding: 10px 0 10px 120px;
      line-height: 1.9em;
    }
    
    #content .item-list > li:hover, #content .item-list > li.hover {
      background-color: #fff;
      border-bottom: 2px solid #000;
      margin-bottom: -1px;
    }
    
    #content .item-list p {
      font-size: 1.5em;
      background: url(../images/sprite1.png) no-repeat 0 -93px;
      padding-left: 15px;
      margin-right: 150px;
    }
    
    #content .item-list .completed p {
      text-decoration: line-through;
      color: #9b9b9b;
      background-position: 0 -194px;
    }
    
    #content .item-list input.task-edit,
    #content .header input.task-edit {
        padding: 0;
        margin: -1px 10px -1px -1px;
        border: 0;
        outline: 0;
        background: none transparent;
        font-size: 1em;
        width: 550px;
    }
    #content .header input.task-edit {
      font-size: 2em;
      width: 215px;
    }
    
    #content .item-list a.save,
    #content .header a.save,
    #content .item-list a.cancel,
    #content .header a.cancel {
        float:right;
        margin-top:2px;
    }
    
    #content .item-list a.cancel,
    #content .header a.cancel {
        margin-right:10px;
        color: #6ab6da;
        text-decoration: none;
        font-size:0.8em;
        line-height:1.1;
    }

    #content .item-list a.cancel:hover,
    #content .header a.cancel:hover {
        text-decoration:underline;
    }
    
    #content .header a.cancel {
        font-size:1.2em;
    }
    
    #content .edit-item li {
       position: absolute;
    }
    
      #content .edit-item li a {
        display: block;
        text-indent: -1000em;
        background: url(../images/sprite2.png) no-repeat;
        opacity: 0.5;
      }
      
      #content .edit-item li a:hover,
      #content .edit-item .star a,
      #content .edit-item .tick a {
        opacity: 1;
      }
      
/* star */

    #content .edit-item .star {
      top: 8px;
      left: 30px;
    }
    
      #content .edit-item .star a {
        width: 21px;
        height: 21px;
        background-position: 0 0;
      }
      #content .edit-item .star a:hover {
        background-position: 0 -42px;
      }
      #content .star .edit-item .star a {
        background-position: 0 -21px;
      }
  
/* tick */    
      
    #content .edit-item .tick {
      top: 8px;
      left: 65px;
    }

      #content .edit-item .tick a {
        width: 20px;
        height: 21px;
        background-position: -21px 0;
        opacity: 1;
      }
      #content .edit-item .tick a:hover {
        background-position: -21px -41px;
      }
      #content .completed .edit-item .tick a {
        background-position: -21px -21px;
      }
      

/* move */

    #content .edit-item .move {
      top: 12px;
      right: 100px;
    }

      #content .edit-item .move a {
        width: 15px;
        height: 16px;
        background-position: -75px -5px;
      }


/* edit */

        #content .edit-item .edit {
          top: 12px;
          right: 67px;
        }

          #content .edit-item .edit a {
            width: 20px;
            height: 19px;
            background-position: -55px -2px;
          }
          
        #content .header.editing .edit-item {
          display: none;
        }
          
          #content .header .edit-item .edit {
            position: static;
            float: left;
            margin-top: 2px;
          }
          
        
            
/* delete */

        #content .edit-item .delete {
          top: 10px;
          right: 40px;
        }

        #content .edit-item .delete a {
          width: 14px;
          height: 19px;
          background-position: -41px -2px;
        }

				/* This should be placed after the rules handling hover item'control's over state */
				#content .item-list li.unsaved .edit-item {
					visibility: hidden;
        }
        
/* move, edit, delete rollover */

      #content .edit-item .move,
      #content .edit-item .edit,
      #content .edit-item .delete {
        visibility: hidden;
      }
      
      #content .item-list > li:hover .edit-item .move,
      #content .item-list > li:hover .edit-item .edit,
      #content .item-list > li:hover .edit-item .delete,
      #content .header:hover .edit-item .edit,

      /* IE6 compatibility */
      #content .item-list > li.hover .edit-item .move,
      #content .item-list > li.hover .edit-item .edit,
      #content .item-list > li.hover .edit-item .delete,
      #content .header.hover .edit-item .edit {
        visibility: visible;
      }
/* ... */

